--- a/catalog.html
+++ b/catalog.html
@@ -22,9 +22,9 @@
               <path d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
             </svg>
           </div>
-          <a class="bookmark-link" href="blank.html">Закладки: 0</a>
-          <a class="cart-link cart-full" href="blank.html">Корзина: 10</a>
-          <a class="order-link" href="blank.html">Оформить заказ</a>
+          <a class="bookmark-link" href="#">Закладки: 0</a>
+          <a class="cart-link cart-full" href="#">Корзина: 10</a>
+          <a class="order-link" href="#">Оформить заказ</a>
         </div>
       </div>
       <div class="container">
@@ -41,13 +41,13 @@
           <div class="main-header-account">
             <div class="profile-container">
               <div class="user-container">
-                <a class="username-link" href="blank.html">
+                <a class="username-link" href="#">
                   <svg aria-hidden="true" focusable="false" width="20" height="18" viewBox="0 0 20 18">
                     <path d="M17.881 14.166C15.737 13.431 13.625 12.5 12.674 11.776C12.017 11.275 11.904 10.158 12.157 9.361C13.275 8.458 14.021 6.884 14.021 5.083C14.021 2.276 12.221 0 10 0C7.77902 0 5.97901 2.276 5.97901 5.083C5.97901 6.884 6.72501 8.457 7.84201 9.36C8.09501 10.158 7.98302 11.275 7.32502 11.776C6.37502 12.5 4.26201 13.43 2.11801 14.166C-0.0259852 14.902 1.48343e-05 18 1.48343e-05 18H20C20 18 20.025 14.901 17.881 14.166Z" fill="#C5C5C5"/>
                   </svg>
                   <span>Равшан Джамшутович</span>
                 </a>
-                <a class="logout-link" href="blank.html">
+                <a class="logout-link" href="#">
                   <span class="visually-hidden">Выйти</span>
                   <svg aria-hidden="true" focusable="false" width="20" height="17" viewBox="0 0 20 17">
                     <path d="M20 8.5L11.125 0V6H5.125V11H11.125V17L20 8.5Z" fill="#C5C5C5"/>
@@ -56,8 +56,8 @@
                 </a>
               </div>
               <ul class="profile-links">
-                <li class="profile-link-item"><a href="blank.html">Мои заказы</a></li>
-                <li class="profile-link-item"><a href="blank.html">Личный кабинет</a></li>
+                <li class="profile-link-item"><a href="#">Мои заказы</a></li>
+                <li class="profile-link-item"><a href="#">Личный кабинет</a></li>
               </ul>
             </div>
           </div>
@@ -66,12 +66,12 @@
       <nav class="main-navigation container">
         <ul class="page-navigation">
           <li><a href="index.html">Главная</a></li>
-          <li><a href="blank.html">Компания</a></li>
+          <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -85,7 +85,7 @@
             <a href="catalog.html">Каталог</a>
           </li>
           <li>
-            <a href="blank.html">Инструмент</a>
+            <a href="#">Инструмент</a>
           </li>
           <li class="breadcrumbs-current">
             Перфораторы
@@ -183,7 +183,7 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
@@ -201,7 +201,7 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
@@ -219,7 +219,7 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
@@ -237,7 +237,7 @@
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
@@ -255,7 +255,7 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
@@ -273,7 +273,7 @@
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
@@ -291,7 +291,7 @@
                   <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">22500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
@@ -309,7 +309,7 @@
                   <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price">30500 Р.</p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
@@ -327,7 +327,7 @@
                   <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
                 </p>
                 <p class="catalog-item-price catalog-item-old-price"></p>
-                <a class="catalog-item-price catalog-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
+                <a class="catalog-item-price catalog-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
                 <figcaption class="catalog-item-options">
                   <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину">Купить</button>
                   <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки">В закладки</button>
@@ -375,19 +375,19 @@
           </div>
           <div class="footer-navigation">
             <ul class="footer-navigation-links">
-              <li><a href="blank.html">Компания</a></li>
-              <li><a href="blank.html">Новости</a></li>
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
               <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="blank.html">Доставка</a></li>
-              <li><a href="blank.html">Контакты</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
           </div>
           <div class="footer-promo">
             <ul class="footer-promo-links">
-              <li><a href="blank.html">Материалы</a></li>
-              <li><a href="blank.html">Техника</a></li>
-              <li><a href="blank.html">Инструмент</a></li>
-              <li><a href="blank.html">Спецпредложения</a></li>
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
             </ul>
           </div>
         </div>
