--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
               <path d="M13.458 12.044L17 15.586L15.586 17L12.044 13.458C10.782 14.421 9.21 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15.0001 9.14309 14.4581 10.7403 13.458 12.044ZM7.5 2C4.467 2 2 4.467 2 7.5C2.00331 10.5362 4.4638 12.9967 7.5 13C10.532 13 13 10.532 13 7.5C13 4.467 10.532 2 7.5 2Z" fill="white"/>
             </svg>
           </div>
-          <a class="bookmark-link" href="blank.html">Закладки: 0</a>
-          <a class="cart-link" href="blank.html">Корзина: 0</a>
-          <a class="order-link" href="blank.html">Оформить заказ</a>
+          <a class="bookmark-link" href="#">Закладки: 0</a>
+          <a class="cart-link" href="#">Корзина: 0</a>
+          <a class="order-link" href="#">Оформить заказ</a>
         </div>
       </div>
       <div class="container">
@@ -40,14 +40,14 @@
           </div>
           <div class="main-header-account">
             <div class="authorization-container">
-              <a class="login-link" href="blank.html">
+              <a class="login-link" href="#">
                 <svg aria-hidden="true" focusable="false" width="21" height="17" viewBox="0 0 21 17">
                   <path d="M14.875 8.5L6 0V6H0V11H6V17L14.875 8.5Z" fill="#C5C5C5"/>
                   <path d="M16.986 15.01H11.959V17H16.986C19.164 17 19.99 15.19 20.015 13.974V3.028C19.99 1.811 19.164 0 16.986 0H11.959V1.99H16.986C17.825 1.99 17.978 2.671 17.996 3.047V13.951C17.979 14.327 17.825 15.01 16.986 15.01Z" fill="#C5C5C5"/>
                 </svg>
                 <span>Войти</span>
               </a>
-              <a class="register-link" href="blank.html">Регистрация</a>
+              <a class="register-link" href="#">Регистрация</a>
             </div>
           </div>
         </div>
@@ -55,12 +55,12 @@
       <nav class="main-navigation container">
         <ul class="page-navigation">
           <li><a>Главная</a></li>
-          <li><a href="blank.html">Компания</a></li>
+          <li><a href="#">Компания</a></li>
           <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="blank.html">Новости</a></li>
-          <li><a href="blank.html">Спецпредложения</a></li>
-          <li><a href="blank.html">Доставка</a></li>
-          <li><a href="blank.html">Контакты</a></li>
+          <li><a href="#">Новости</a></li>
+          <li><a href="#">Спецпредложения</a></li>
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
@@ -72,27 +72,27 @@
           <li class="offer-item offer-item-materials">
             <p class="tag-new">new</p>
             <h3 class="offer-item-title">Материалы</h3>
-            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Материалами">На любой вкус</a>
+            <a class="offer-item-button" href="#" aria-label="Перейти на страницу с Материалами">На любой вкус</a>
           </li>
           <li class="offer-item offer-item-tool">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Инструмент</h3>
-            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Инструментом">На все случаи</a>
+            <a class="offer-item-button" href="#" aria-label="Перейти на страницу с Инструментом">На все случаи</a>
           </li>
           <li class="offer-item offer-item-equipment">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Техника</h3>
-            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Техникой">Для стройки</a>
+            <a class="offer-item-button" href="#" aria-label="Перейти на страницу с Техникой">Для стройки</a>
           </li>
           <li class="offer-item offer-item-discount">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Скидка 50%</h3>
-            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу Товаров со скидкой">На 350 товаров</a>
+            <a class="offer-item-button" href="#" aria-label="Перейти на страницу Товаров со скидкой">На 350 товаров</a>
           </li>
           <li class="offer-item offer-item-delivery">
             <p class="tag-new visually-hidden"></p>
             <h3 class="offer-item-title">Доставка</h3>
-            <a class="offer-item-button" href="blank.html" aria-label="Перейти на страницу с Услугами доставки">Бесплатно</a>
+            <a class="offer-item-button" href="#" aria-label="Перейти на страницу с Услугами доставки">Бесплатно</a>
           </li>
           <li class="offers-slider">
             <div class="offers-slider-content">
@@ -129,7 +129,7 @@
       <section class="popular-items container">
         <div class="popular-items-container">
           <h2 class="popular-items-title">Популярные товары:</h2>
-          <a class="button" href="blank.html">Все популярные товары</a>
+          <a class="button" href="#">Все популярные товары</a>
         </div>
         <ul class="popular-items-list">
           <li class="popular-item" tabindex="0">
@@ -143,7 +143,7 @@
                 <img src="img/item-bosch-bfg9000.png" width="184" height="164" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">32500 Р.</p>
-              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 9000»">25500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 9000»">25500 Р.</a>
               <figcaption class="popular-item-options">
                 <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в корзину">Купить</button>
                 <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 9000 в закладки">В закладки</button>
@@ -161,7 +161,7 @@
                 <img src="img/item-bosch-bfg3000.png" width="127" height="112" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">22500 Р.</p>
-              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 3000»">15500 Р.</a>
               <figcaption class="popular-item-options">
                 <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в корзину">Купить</button>
                 <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 3000 в закладки">В закладки</button>
@@ -179,7 +179,7 @@
                 <img src="img/item-bosch-bfg6000.png" width="144" height="128" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price">30500 Р.</p>
-              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 6000»">25500 Р.</a>
               <figcaption class="popular-item-options">
                 <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в корзину">Купить</button>
                 <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 6000 в закладки">В закладки</button>
@@ -197,7 +197,7 @@
                 <img src="img/item-bosch-bfg2000.png" width="127" height="112" alt="">
               </p>
               <p class="popular-item-price popular-item-old-price"></p>
-              <a class="popular-item-price popular-item-button" href="blank.html" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
+              <a class="popular-item-price popular-item-button" href="#" aria-label="Перейти на страницу товара «Перфоратор BOSCH BFG 2000»">12500 Р.</a>
               <figcaption class="popular-item-options">
                 <button class="option-buy" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в корзину" tabindex="0">Купить</button>
                 <button class="option-bookmark" type="button" aria-label="Добавить Перфоратор BOSCH BFG 2000 в закладки" tabindex="0">В закладки</button>
@@ -209,46 +209,46 @@
       <section class="popular-brands container">
         <div class="popular-brands-container">
           <h2 class="popular-brands-title">Популярные производители:</h2>
-          <a class="button" href="blank.html">Все производители</a>
+          <a class="button" href="#">Все производители</a>
         </div>
         <ul class="popular-brands-list">
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-bosch.png" width="126" height="37" alt="Логотип производителя BOSCH">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-makita.png" width="123" height="40" alt="Логотип производителя Makita">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-dewalt.png" width="146" height="44" alt="Логотип производителя DeWALT">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-interskol.png" width="200" height="76" alt="Логотип производителя Интерскол">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-hitachi.png" width="169" height="31" alt="Логотип производителя Hitachi">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-lg.png" width="121" height="73" alt="Логотип производителя LG">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-aeg.png" width="151" height="96" alt="Логотип производителя AEG">
             </a>
           </li>
           <li class="popular-brand-item">
-            <a class="popular-brand-link" href="blank.html">
+            <a class="popular-brand-link" href="#">
               <img class="popular-brand-logo" src="img/brand-metabo.png" width="204" height="69" alt="Логотип производителя Metabo">
             </a>
           </li>
@@ -287,7 +287,7 @@
                 <h3 class="services-slide-title">Кредит</h3>
                 <p class="services-slide-info">Залезть в долговую яму стало проще!<br>
                   Кредитные консультанты придут вам на помощь.
-                  <a class="button services-slide-button" href="blank.html">Отправить заявку</a>
+                  <a class="button services-slide-button" href="#">Отправить заявку</a>
                 </p>
               </li>
             </ul>
@@ -304,18 +304,18 @@
             <li class="transport-company-item">Автотрейдинг</li>
             <li class="transport-company-item">ЖелДорЭкспедиция</li>
           </ul>
-          <a class="button about-button" href="blank.html">Подробнее о компании</a>
+          <a class="button about-button" href="#">Подробнее о компании</a>
         </section>
         <section class="contacts">
           <h2>Контакты</h2>
           <p class="contacts-info">Вы можете забрать товар сами,<br>
             заехав в наш офис:</p>
           <p class="contacts-map">
-            <a class="contacts-map-link" href="blank.html">
+            <a class="contacts-map-link" href="#">
               <img class="contacts-map-image" src="img/map-small.png" width="300" height="158" alt="Карта офиса по адресу г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
             </a>
           </p>
-          <a class="button contacts-button" href="blank.html">Заблудились? Напишите нам!</a>
+          <a class="button contacts-button" href="#">Заблудились? Напишите нам!</a>
         </section>
       </div>
     </main>
@@ -333,19 +333,19 @@
           </div>
           <div class="footer-navigation">
             <ul class="footer-navigation-links">
-              <li><a href="blank.html">Компания</a></li>
-              <li><a href="blank.html">Новости</a></li>
+              <li><a href="#">Компания</a></li>
+              <li><a href="#">Новости</a></li>
               <li><a href="catalog.html">Каталог</a></li>
-              <li><a href="blank.html">Доставка</a></li>
-              <li><a href="blank.html">Контакты</a></li>
+              <li><a href="#">Доставка</a></li>
+              <li><a href="#">Контакты</a></li>
             </ul>
           </div>
           <div class="footer-promo">
             <ul class="footer-promo-links">
-              <li><a href="blank.html">Материалы</a></li>
-              <li><a href="blank.html">Техника</a></li>
-              <li><a href="blank.html">Инструмент</a></li>
-              <li><a href="blank.html">Спецпредложения</a></li>
+              <li><a href="#">Материалы</a></li>
+              <li><a href="#">Техника</a></li>
+              <li><a href="#">Инструмент</a></li>
+              <li><a href="#">Спецпредложения</a></li>
             </ul>
           </div>
         </div>
